--- a/index.htm
+++ b/index.htm
@@ -17,12 +17,17 @@
     <main>
         <!-- #game-start is initially shown on the game start screen -->
         <div id="game-start">
-            <img class="imagem" src="Imagem/fundo1.png">
+            <img class="imagem" src="Imagem/capa.jpeg">
             <img class="brainBooks" src="Imagem/ceeee-removebg-preview.png" alt="brain books">
+            <img class="brainBooks2" src="Imagem/brain2.png" alt="brain books">
+            <img class="brainBooks3" src="Imagem/brain3.png" alt="brain books">
+            <img class="brainBooks4" src="Imagem/brain4.png" alt="brain books">
+            <img class="brainBooks5" src="Imagem/brain5.png" alt="brain books">
          <button id="start-button">Start Game</button><br>
-            <p class="letraCerebro">Use the left and right arrow to control the SuperBrain 🧠</p>
+            <p class="letraCerebro">Use the left and right arrow to control the SuperBrain </p>
 
         <img class="arrowAzul" src="Imagem/arrowazul-fotor-bg-remover-20230625214155.png" alt="" class="arrows-img" />
+  
     </div>
         </div>
 
